Base station - fixed test issue